--- a/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/Service.mustache
+++ b/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/Service.mustache
@@ -38,6 +38,9 @@ import javax.validation.constraints.*;
 @Path("/{{apiName}}")
 public interface {{classname}} {
 
+  public static String DEFAULT_SERVICE_URL = "{{serviceDefaultUrl}}";
+
+
   {{#operation}}
   /**
    * {{summary}}
