changes to pubilsh server url as default service url

--- a/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/SecurityService.mustache
+++ b/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/SecurityService.mustache
@@ -38,7 +38,9 @@ import javax.ws.rs.*;
   @Path("/{{apiName}}")
   public interface {{classname}} {
 
-    public static String DEFAULT_SERVICE_URL = "{{serviceDefaultUrl}}";
+  {{#serviceDefaultUrl}}
+      public static String DEFAULT_SERVICE_URL = "{{{serviceDefaultUrl}}}";
+  {{/serviceDefaultUrl}}
 
   {{#operation}}
     /**
