--- a/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/pojo.mustache
+++ b/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/pojo.mustache
@@ -89,7 +89,7 @@ public class {{classname}} {{#parent}}extends {{{parent}}} {{/parent}}{{#parcela
     this.{{name}} = {{name}};
     return this;
   }
-  {{#isListContainer}}
+  {{#isArray}}
 
   public {{classname}} add{{nameInCamelCase}}Item({{{items.datatypeWithEnum}}} {{name}}Item) {
     {{^required}}
@@ -100,8 +100,8 @@ public class {{classname}} {{#parent}}extends {{{parent}}} {{/parent}}{{#parcela
     this.{{name}}.add({{name}}Item);
     return this;
   }
-  {{/isListContainer}}
-  {{#isMapContainer}}
+  {{/isArray}}
+  {{#isMap}}
 
   public {{classname}} put{{nameInCamelCase}}Item(String key, {{{items.datatypeWithEnum}}} {{name}}Item) {
     {{^required}}
@@ -112,7 +112,7 @@ public class {{classname}} {{#parent}}extends {{{parent}}} {{/parent}}{{#parcela
     this.{{name}}.put(key, {{name}}Item);
     return this;
   }
-  {{/isMapContainer}}
+  {{/isMap}}
 
   {{/isReadOnly}}
    /**
@@ -227,26 +227,27 @@ public class {{classname}} {{#parent}}extends {{{parent}}} {{/parent}}{{#parcela
   }
 
 
+{{^x-no-copy}}
   public {{classname}} copy() {
     {{classname}} copy = new {{classname}}();
 
    {{#vars}}
-     {{#isListContainer}}
+     {{#isArray}}
        {{^complexType}}
     copy.{{setter}}(this.{{getter}}() == null ? null : new java.util.ArrayList<>(this.{{getter}}()));
        {{/complexType}}
        {{#complexType}}
     copy.{{setter}}(this.{{getter}}() == null ? null : this.{{getter}}().stream().map(t -> t.copy()).collect(java.util.stream.Collectors.toList()));
        {{/complexType}}
-     {{/isListContainer}}
-     {{#isMapContainer}}
-      {{#isPrimitiveType}}
+     {{/isArray}}
+     {{#isMap}}
+      {{^isModel}}
     copy.{{setter}}(this.{{getter}}() == null ? null : this.{{getter}}().entrySet().stream().collect(java.util.stream.Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
-      {{/isPrimitiveType}}
-      {{^isPrimitiveType}}
+      {{/isModel}}
+      {{#isModel}}
     copy.{{setter}}(this.{{getter}}() == null ? null : this.{{getter}}().entrySet().stream().collect(java.util.stream.Collectors.toMap(Map.Entry::getKey, t -> t.getValue().copy())));
-      {{/isPrimitiveType}}
-     {{/isMapContainer}}
+      {{/isModel}}
+     {{/isMap}}
      {{^isContainer}}
       {{#isFreeFormObject}}
     copy.{{setter}}(this.{{getter}}().copy());
@@ -259,64 +260,5 @@ public class {{classname}} {{#parent}}extends {{{parent}}} {{/parent}}{{#parcela
 
     return copy;
   }
-
-{{#parcelableModel}}
-
-  public void writeToParcel(Parcel out, int flags) {
-{{#model}}
-{{#isArrayModel}}
-    out.writeList(this);
-{{/isArrayModel}}
-{{^isArrayModel}}
-{{#parent}}
-    super.writeToParcel(out, flags);
-{{/parent}}
-{{#vars}}
-    out.writeValue({{name}});
-{{/vars}}
-{{/isArrayModel}}
-{{/model}}
-  }
-
-  {{classname}}(Parcel in) {
-{{#isArrayModel}}
-    in.readTypedList(this, {{arrayModelType}}.CREATOR);
-{{/isArrayModel}}
-{{^isArrayModel}}
-{{#parent}}
-    super(in);
-{{/parent}}
-{{#vars}}
-{{#isPrimitiveType}}
-    {{name}} = ({{{datatypeWithEnum}}})in.readValue(null);
-{{/isPrimitiveType}}
-{{^isPrimitiveType}}
-    {{name}} = ({{{datatypeWithEnum}}})in.readValue({{complexType}}.class.getClassLoader());
-{{/isPrimitiveType}}
-{{/vars}}
-{{/isArrayModel}}
-  }
-
-  public int describeContents() {
-    return 0;
-  }
-
-  public static final Parcelable.Creator<{{classname}}> CREATOR = new Parcelable.Creator<{{classname}}>() {
-    public {{classname}} createFromParcel(Parcel in) {
-{{#model}}
-{{#isArrayModel}}
-      {{classname}} result = new {{classname}}();
-      result.addAll(in.readArrayList({{arrayModelType}}.class.getClassLoader()));
-      return result;
-{{/isArrayModel}}
-{{^isArrayModel}}
-      return new {{classname}}(in);
-{{/isArrayModel}}
-{{/model}}
-    }
-    public {{classname}}[] newArray(int size) {
-      return new {{classname}}[size];
-    }
-  };
-{{/parcelableModel}}
+{{/x-no-copy}}
 }
