--- a/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/DelegateServerService.mustache
+++ b/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/DelegateServerService.mustache
@@ -48,7 +48,7 @@ import javax.inject.Inject;
       @Deprecated
     {{/isDeprecated}}
     {{#vendorExtensions.x-java-annotations}}{{{.}}}{{/vendorExtensions.x-java-annotations}}
-    public {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}Response {{/returnType}}{{operationId}}({{#allParams}}{{{dataType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}}{{#authMethods}}{{#hasParams}}, {{/hasParams}}SecurityContext securityContext{{/authMethods}}) {
+    public {{#returnType}}{{{returnType}}} {{/returnType}}{{^returnType}}Response {{/returnType}}{{operationId}}({{#allParams}}{{{dataType}}} {{paramName}}{{^-last}}, {{/-last}}{{/allParams}}{{#authMethods}}{{#hasParams}}, {{/hasParams}}SecurityContext securityContext{{/authMethods}}) {
   {{#vendorExtensions.x-has-delegator-holder}}
       final {{classname}}Delegate.{{{vendorExtensions.x-class-delegator-holder}}} holder = new {{classname}}Delegate.{{{vendorExtensions.x-class-delegator-holder}}}();
     {{#vendorExtensions.x-delegator-holder-params}}
