--- a/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/modelInnerEnum.mustache
+++ b/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/modelInnerEnum.mustache
@@ -13,7 +13,7 @@
      */
     {{/enumDescription}}
     {{{name}}}({{{value}}}){{^-last}},
-    {{/-last}}{{#-last}};{{/-last}}{{/enumVars}}{{/allowableValues}}
+    {{/-last}}{{^-last}};{{/-last}}{{/enumVars}}{{/allowableValues}}
 
     private {{{dataType}}} value;
 
