--- a/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/ClientService.mustache
+++ b/maven-plugins/openapi-jersey2-plugin/src/main/resources/jersey2-v3template/ClientService.mustache
@@ -35,7 +35,7 @@ import javax.ws.rs.*;
 {{#hasConsumes}}@Consumes({ {{#consumes}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/consumes}} }){{/hasConsumes}}
 {{#hasProduces}}@Produces({ {{#produces}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/produces}} }){{/hasProduces}}
 {{#operations}}
-  @Path("/{{apiName}}")
+  @Path("{{commonPath}}")
   public interface {{classname}}Client {
 
   {{#operation}}
@@ -56,8 +56,8 @@ import javax.ws.rs.*;
       * @see <a href="{{url}}">{{summary}} Documentation</a>
     {{/externalDocs}}
     */
-    @{{httpMethod}}{{#subresourceOperation}}
-      @Path("{{path}}"){{/subresourceOperation}}{{#hasConsumes}}
+    @{{httpMethod}}
+      @Path("{{path}}"){{#hasConsumes}}
       @Consumes({ {{#consumes}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/consumes}} }){{/hasConsumes}}{{#hasProduces}}
       @Produces({ {{#produces}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/produces}} }){{/hasProduces}}
     {{#isDeprecated}}
@@ -82,8 +82,8 @@ import javax.ws.rs.*;
       * @see <a href="{{url}}">{{summary}} Documentation</a>
     {{/externalDocs}}
     */
-    @{{httpMethod}}{{#subresourceOperation}}
-      @Path("{{path}}"){{/subresourceOperation}}{{#hasConsumes}}
+    @{{httpMethod}}
+      @Path("{{path}}"){{#hasConsumes}}
       @Consumes({ {{#consumes}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/consumes}} }){{/hasConsumes}}{{#hasProduces}}
       @Produces({ {{#produces}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/produces}} }){{/hasProduces}}
     {{#isDeprecated}}
